ユーザパラメータ内のカウント方法を変更

--- a/userparameter_chinachu.conf
+++ b/userparameter_chinachu.conf
@@ -10,9 +10,9 @@ UserParameter=chinachu.schedule.max[*],jq . $1 |grep -e end   |cut -d":" -f2 |so
 UserParameter=chinachu.json-validate[*],jq "." $1 >/dev/null 2>&1; echo $?
 UserParameter=chinachu.config.tuners.num[*],jq ".tuners | length"  $1
 UserParameter=chinachu.config.channels.num[*],jq ".channels |length" $1
-UserParameter=chinachu.schedule.num[*],jq .[].programs[].id $1 |wc -l
-UserParameter=chinachu.reserves.num[*],jq .[].id $1 |wc -l
-UserParameter=chinachu.rules.num[*],jq '. |length ' $1  | wc -l
+UserParameter=chinachu.schedule.num[*],jq '[ .[].programs[].id ] |length' $1
+UserParameter=chinachu.reserves.num[*],jq '[ .[].id ] |length' $1
+UserParameter=chinachu.rules.num[*],jq '. |length ' $1
 UserParameter=chinachu.resered-titles.num[*],jq '[ .[].reserve_titles[] ] |length' $1
 
 
