--- a/userparameter_chinachu.conf
+++ b/userparameter_chinachu.conf
@@ -3,16 +3,20 @@
 
 UserParameter=service.status[*],service $1 status >/dev/null; echo $?
 
-UserParameter=chinachu.schedule.min[*],jq . $1 |grep -e start |cut -d":" -f2 |sort |head -n1 |sed -e "s/^ //" -e "s/000,//"
-UserParameter=chinachu.schedule.max[*],jq . $1 |grep -e end   |cut -d":" -f2 |sort |tail -n1 |sed -e "s/^ //" -e "s/000,//"
-
+UserParameter=chinachu.schedule.min[*],jq "[ .[].programs[].start ] |min / 1000" $1
+UserParameter=chinachu.schedule.max[*],jq "[ .[].programs[].start ] |max / 1000" $1
 
 UserParameter=chinachu.json-validate[*],jq "." $1 >/dev/null 2>&1; echo $?
+
 UserParameter=chinachu.config.tuners.num[*],jq ".tuners | length"  $1
 UserParameter=chinachu.config.channels.num[*],jq ".channels |length" $1
 UserParameter=chinachu.schedule.num[*],jq '[ .[].programs[].id ] |length' $1
-UserParameter=chinachu.reserves.num[*],jq '[ .[].id ] |length' $1
+
 UserParameter=chinachu.rules.num[*],jq '. |length ' $1
+UserParameter=chinachu.reserves.num[*],jq '[ .[].id ] |length' $1
 UserParameter=chinachu.resered-titles.num[*],jq '[ .[].reserve_titles[] ] |length' $1
+
+UserParameter=chinachu.recording.num[*],jq '. |length ' $1
+UserParameter=chinachu.recorded.num[*],jq '. |length ' $1
 
 
